Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97475

Crash in QItemSelectionModel

XMLWordPrintable

    • macOS
    • dbc434dc090df6c475a336cb95e3524150ca7bae (qt/qtbase/dev) 432bab96bc3b8b92797fdfc35368869a0e7f6976 (qt/qtbase/6.2.1) 5c68e948a3b6ea3ecd8a5b5883e6bcea1b873a72 (qt/qtbase/6.2)

      Segmentation faults with Qt version 6.2.0-beta3 in the `QItemSelectionModel`.

      Minimal repro qml file is attached.

      In the attached repro the crash occurs in `QItemSelectionModel::hasSelection`. I haven't debugged in the Qt source code so I don't have any more details.

        1. main.qml
          0.8 kB
          Ben Leadbetter
        For Gerrit Dashboard: QTBUG-97475
        # Subject Branch Project Status CR V

            andreasbuhr Andreas Buhr
            leadbelly Ben Leadbetter
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes